--- a/configs/data_config.yaml
+++ b/configs/data_config.yaml
@@ -2,3 +2,10 @@ raw_images_dir: /mnt/l/Basic/divi/jstoker/slicer_pdac/Marius/Reza Morphology/dat
 raw_segmentations_ai_dir: /mnt/l/Basic/divi/jstoker/slicer_pdac/Marius/Reza Morphology/data/raw_data/CRLM/segmentations_ai
 
 preprocessed_data_base_dir: /mnt/l/Basic/divi/jstoker/slicer_pdac/Marius/Reza Morphology/data/preprocessed_data/CRLM
+
+crop_dimensions_mm: [320.0, 256.0, 384.0]  # [x, y, z] in mm
+
+resample_spacing_mm: [1.0, 1.0, 3.0]  # [x, y, z] in mm
+
+radiomics_bin_width: 25
+radiomics_min_voxels: 50
